fixed livewire js nginx asset 404 issue

--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -1,3 +1,5 @@
+# https://inyomanjyotisa.medium.com/how-to-fix-the-404-not-found-error-for-livewire-livewire-js-95ef0f6a0567
+
 server {
   # Render provisions and terminates SSL
   listen 80;
@@ -35,6 +37,11 @@ server {
   location = /robots.txt  { access_log off; log_not_found off; }
 
   error_page 404 /index.php;
+
+  location = /livewire/livewire.js {
+    expires off;
+    try_files $uri $uri/ /index.php?$query_string;
+}
 
   location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
     expires 5d;
